# desk-mcp

./: .gitignore  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  Cargo.toml  LICENSE  PLANNING.md  README.md  _config.yml  benchmark.py  desk-mcp-run.sh  discovery.py  install.sh  parse_condos.py  requirements.txt  response.py  test_bl.py  test_browser_isolated.py  test_e2e_quick.py  test_mcp2.py  test_minimal.py  test_phase8_verify.py  test_quick.py  test_screenshot.py  test_ws.py
.aionrs/skills/: cron  officecli  skill-creator
.github/workflows/: ci.yml  pages.yml  release.yml
benches/: tool_benchmarks.rs
docs/: AGENTS.md  configuration.md  error-codes.md  example_recipe.json  index.md  install.md  policy.md  security.md  tools.md
extension/: background.js  manifest.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: tool_sequence.rs
providers/: __init__.py  _base.py  headless.py  wayland_kde.py
src/: a11y.rs  audit.rs  auth.rs  dashboard.rs  discovery.rs  error.rs  lib.rs  main.rs  ocr.rs  plugin.rs  policy.rs  recipes.rs  record.rs  resolution.rs  response.rs  safety.rs  session.rs  transport.rs  vision.rs
src/providers/: atspi_backend.rs  browser_extension.rs  headless.rs  kde_wayland.rs  kwin_dbus.rs  macos.rs  mock.rs  mod.rs  windows.rs
src/tools/: a11y.rs  browser.rs  browser_cdp.rs  code.rs  computer.rs  mod.rs  search.rs
tests/: e2e_test.py  integration_tests.rs  schema_tests.rs  unit_tests.rs
