[package]
name = "desk-mcp"
version = "0.5.0"
edition = "2021"
description = "Full desktop control MCP server — screenshots, mouse, keyboard, OCR, browser automation, code tools"
authors = ["ShibbityShwab"]
license = "MIT"
repository = "https://github.com/ShibbityShwab/desk-mcp"
readme = "README.md"
keywords = ["mcp", "desktop", "automation", "ocr", "browser"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "desk-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.9" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
tempfile = "3"
futures = "0.3"
which = "7"
glob = "0.3"
thiserror = "2"
image = "0.25"
libc = "0.2"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

dirs-next = "2.0.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
libloading = "0.8"
dashmap = "6"
reqwest = { version = "0.12", default-features = true, features = ["blocking"] }

# OpenTelemetry OTLP exporter (enabled via DESKMCP_OTLP=1)
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
arboard = "3"
enigo = { version = "0.3", default-features = false, features = ["x11rb"] }
wdotool-core = "0.5"
zbus = { version = "5", features = ["tokio"] }
atspi = { version = "0.11", features = ["tokio", "client-accessories"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[[bench]]
name = "tool_benchmarks"
harness = false
